--- a/SCRIPTS_N/hparams/train_discrete_SSL.yaml
+++ b/SCRIPTS_N/hparams/train_discrete_SSL.yaml
@@ -45,14 +45,8 @@ vocoder_configs:
         kmeans_dataset: LibriSpeech
         ssl_layers: [1, 3, 7, 12, 18, 23]
 
-# Dynamic vocoder selection
-current_vocoder_config: !apply:speechbrain.utils.hparams.choice
-    value: !ref <ssl_model_type>
-    choices: !ref <vocoder_configs>
-
 # K-means cache directory
 kmeans_cache_dir: !ref <save_folder>/kmeans_cache
-kmeans_dataset: !ref <current_vocoder_config>[kmeans_dataset]
 
 # SSL settings
 freeze_ssl: True
@@ -60,8 +54,43 @@ freeze_feature_extractor: True
 num_codebooks: 6  # Number of codebooks/layers
 num_clusters: 1000  # K-means clusters
 
-# Dynamic SSL layer selection
-ssl_layer_num: !ref <current_vocoder_config>[ssl_layers]
+# Static configurations for each SSL type (will be selected dynamically)
+# WavLM configuration
+wavlm_vocoder_repo_id: speechbrain/hifigan-wavlm-l1-3-7-12-18-23-k1000-LibriTTS
+wavlm_kmeans_dataset: LibriSpeech
+wavlm_ssl_layers: [1, 3, 7, 12, 18, 23]
+
+# HuBERT configuration  
+hubert_vocoder_repo_id: speechbrain/hifigan-hubert-k1000-LibriTTS
+hubert_kmeans_dataset: LibriSpeech
+hubert_ssl_layers: [7, 23]
+
+# Wav2Vec2 configuration
+wav2vec2_vocoder_repo_id: speechbrain/hifigan-wav2vec-l1-3-7-12-18-23-k1000-LibriTTS
+wav2vec2_kmeans_dataset: LibriSpeech
+wav2vec2_ssl_layers: [1, 3, 7, 12, 18, 23]
+
+# Dynamic selection based on ssl_model_type
+kmeans_dataset: !apply:speechbrain.utils.hparams.choice
+    value: !ref <ssl_model_type>
+    choices:
+        wavlm: !ref <wavlm_kmeans_dataset>
+        hubert: !ref <hubert_kmeans_dataset>
+        wav2vec2: !ref <wav2vec2_kmeans_dataset>
+
+ssl_layer_num: !apply:speechbrain.utils.hparams.choice
+    value: !ref <ssl_model_type>
+    choices:
+        wavlm: !ref <wavlm_ssl_layers>
+        hubert: !ref <hubert_ssl_layers>
+        wav2vec2: !ref <wav2vec2_ssl_layers>
+
+vocoder_repo_id: !apply:speechbrain.utils.hparams.choice
+    value: !ref <ssl_model_type>
+    choices:
+        wavlm: !ref <wavlm_vocoder_repo_id>
+        hubert: !ref <hubert_vocoder_repo_id>
+        wav2vec2: !ref <wav2vec2_vocoder_repo_id>
 
 # Attention mode configuration
 attention_mode: iemocap  # Options: iemocap, dasb, custom
@@ -148,7 +177,7 @@ codec: !new:speechbrain.lobes.models.huggingface_transformers.discrete_ssl.Discr
     ssl_model: !ref <ssl_model>
     kmeans_dataset: !ref <kmeans_dataset>
     num_clusters: !ref <num_clusters>
-    vocoder_repo_id: !ref <current_vocoder_config>[vocoder_repo_id]
+    vocoder_repo_id: !ref <vocoder_repo_id>
 
 # Ultimate Discrete Embedding (IEMOCAP + enhancements)
 discrete_embedding_layer: !new:custom_model.Discrete_EmbeddingLayer
