--- a/SCRIPTS_N/hparams/train_discrete_SSL.yaml
+++ b/SCRIPTS_N/hparams/train_discrete_SSL.yaml
@@ -124,10 +124,10 @@ class_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]  # 10 MSP-PODC
 # Data folders and files
 data_folder: !PLACEHOLDER  # Will be set via command line
 
-# MSP-PODCAST 10-class annotations
-train_annotation: msp_train_10class.json
-valid_annotation: msp_valid_10class.json
-test_annotation: msp_test_10class.json
+# MSP-PODCAST 10-class annotations - 修复路径
+train_annotation: ../msp_train_10class.json
+valid_annotation: ../msp_valid_10class.json
+test_annotation: ../msp_test_10class.json
 
 # Dataloader options
 train_dataloader_opts:
