--- a/SCRIPTS_N/hparams/train_baseline_wavLM.yaml
+++ b/SCRIPTS_N/hparams/train_baseline_wavLM.yaml
@@ -105,6 +105,9 @@ number_of_epochs: 20
 epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
     limit: !ref <number_of_epochs>
 
+# Disable sorting to avoid batching issues
+sorting: random  # Change from 'ascending' to 'random'
+
 # Checkpointer
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
     checkpoints_dir: !ref <save_folder>
