--- a/SCRIPTS_N/hparams/train_baseline_wavLM.yaml
+++ b/SCRIPTS_N/hparams/train_baseline_wavLM.yaml
@@ -29,12 +29,14 @@ train_dataloader_opts:
     batch_size: !ref <batch_size>
     shuffle: True
     num_workers: 1
+    drop_last: True  # 添加这行，丢弃最后不完整的批次
 
 valid_dataloader_opts:
     batch_size: !ref <batch_size>
     shuffle: False
     num_workers: 0
-
+    drop_last: False  # 验证集不需要drop
+    
 test_dataloader_opts:
     batch_size: !ref <batch_size>
     shuffle: False
