--- a/baseline/train_config.yaml
+++ b/baseline/train_config.yaml
@@ -1,8 +1,4 @@
-# ============================================================================
-# 文件3: train_config.yaml - ESP-net训练配置
-# ============================================================================
-
-# ESP-net WavLM + ECAPA-TDNN训练配置
+# ESP-net SER训练配置
 batch_type: numel
 batch_size: 16
 max_epoch: 50
@@ -27,25 +23,19 @@ scheduler_conf:
   T_max: 50
   eta_min: 1.0e-6
 
-# 模型配置
-model: wavlm_ecapa  # 需要注册的模型名
-model_conf:
-  num_class: 10
-  wavlm_model_name: "microsoft/wavlm-large"
-  wavlm_freeze: true
-  
-  # ECAPA-TDNN配置
-  ecapa_channels: [512, 512, 512]
-  ecapa_kernels: [5, 3, 3]
-  ecapa_dilations: [1, 2, 3]
-  context_dim: 1536
-  embedding_dim: 256
-  
-  # 损失配置
-  loss_type: "focal"  # 或 "focal"
-  focal_gamma: 2.0
-  label_smoothing: 0.1
-  save_macro_f1: true
+# 模型配置 (通过命令行参数传递，不在这里指定)
+num_class: 10
+wavlm_model_name: "microsoft/wavlm-large"
+wavlm_freeze: true
+ecapa_channels: [512, 512, 512]
+ecapa_kernels: [5, 3, 3]
+ecapa_dilations: [1, 2, 3]
+context_dim: 1536
+embedding_dim: 256
+loss_type: "cross_entropy"
+focal_gamma: 2.0
+label_smoothing: 0.1
+save_macro_f1: true
 
 # 预处理器配置
 preprocessor: default
@@ -64,9 +54,9 @@ preprocessor_conf:
 
 # 最佳模型选择（重点关注macro-F1）
 best_model_criterion:
-  - ["valid", "macro_f1", "max"]    # 主要标准
-  - ["valid", "acc", "max"]         # 备选标准
-  - ["valid", "loss", "min"]        # 备选标准
+  - ["valid", "macro_f1", "max"]
+  - ["valid", "acc", "max"]
+  - ["valid", "loss", "min"]
 
 # 其他配置
 resume: true
