--- a/baseline/train_config.yaml
+++ b/baseline/train_config.yaml
@@ -1,64 +1,53 @@
-# ESP-net SER训练配置
+# ESP-net SER训练配置 - 修复版
 batch_type: numel
-batch_size: 16
-max_epoch: 50
-patience: 10
+batch_size: 2               # 小批量用于测试
+max_epoch: 1                # 只训练1个epoch
+patience: 1
 seed: 42
-num_workers: 4
-log_interval_steps: 100
+num_workers: 1              # 减少并行度
+log_interval_steps: 1
 grad_clip: 5.0
 accum_grad: 1
 
 # 优化器配置
-optim: adamw
+optim: adam
 optim_conf:
-  lr: 0.0001
-  weight_decay: 0.001
-  betas: [0.9, 0.999]
-  eps: 1.0e-8
+  lr: 0.01
 
 # 学习率调度器
-scheduler: cosineannealinglr
-scheduler_conf:
-  T_max: 50
-  eta_min: 1.0e-6
+scheduler: constantlr
+scheduler_conf: {}
 
-# 模型配置 (通过命令行参数传递，不在这里指定)
-num_class: 10
-wavlm_model_name: "microsoft/wavlm-large"
-wavlm_freeze: true
-ecapa_channels: [512, 512, 512]
-ecapa_kernels: [5, 3, 3]
-ecapa_dilations: [1, 2, 3]
-context_dim: 1536
-embedding_dim: 256
-loss_type: "cross_entropy"
-focal_gamma: 2.0
-label_smoothing: 0.1
-save_macro_f1: true
+# 模型配置
+model: wavlm_ecapa
+model_conf:
+  num_class: 10
+  wavlm_model_name: "microsoft/wavlm-large"
+  wavlm_freeze: true
+  ecapa_channels: [256, 256]
+  ecapa_kernels: [3, 3]
+  ecapa_dilations: [1, 2]
+  context_dim: 512
+  embedding_dim: 128
+  loss_type: "cross_entropy"
+  label_smoothing: 0.0
+  save_macro_f1: true
 
 # 预处理器配置
 preprocessor: default
 preprocessor_conf:
-  # SpecAugment
-  spec_augment: true
-  spec_augment_conf:
-    apply_time_warp: true
-    time_warp_window: 5
-    apply_freq_mask: true
-    freq_mask_width_range: [0, 30]
-    num_freq_mask: 2
-    apply_time_mask: true
-    time_mask_width_range: [0, 40]
-    num_time_mask: 2
+  # 关闭SpecAugment以加速测试
+  spec_augment: false
 
-# 最佳模型选择（重点关注macro-F1）
+# 最佳模型选择
 best_model_criterion:
-  - ["valid", "macro_f1", "max"]
   - ["valid", "acc", "max"]
   - ["valid", "loss", "min"]
 
 # 其他配置
-resume: true
-keep_nbest_models: 5
-use_tensorboard: true
+resume: false
+keep_nbest_models: 1
+use_tensorboard: false
+
+# 分布式训练
+distributed: false
