--- a/baseline_wavLM/requirements.txt
+++ b/baseline_wavLM/requirements.txt
@@ -1,15 +1,25 @@
+# 修改requirements.txt
 cat > requirements.txt << 'EOF'
-torch>=1.10.0
-torchaudio>=0.10.0
-numpy>=1.19.0
-scikit-learn>=0.24.0
-transformers>=4.20.0
-speechbrain>=0.5.0
+# Core dependencies
+torch>=1.10.0,<2.0.0
+torchaudio>=0.10.0,<1.0.0
+numpy>=1.19.0,<2.0.0
+scikit-learn>=0.24.0,<2.0.0
+
+# Model dependencies
+transformers>=4.20.0,<5.0.0
+speechbrain>=0.5.12,<1.0.0
+
+# Training utilities
 wandb>=0.15.0
 tqdm>=4.62.0
+
+# Visualization (optional for training)
 matplotlib>=3.3.0
 seaborn>=0.11.0
 pandas>=1.3.0
-EOF
 
-git add requirements.txt
+# Additional useful packages
+librosa>=0.9.0
+soundfile>=0.10.0
+EOF
